--- a/Proyect4-Rosasamarillas/index.html
+++ b/Proyect4-Rosasamarillas/index.html
@@ -67,8 +67,8 @@
     </style>
 </head>
 <body>
-    <div>
-        <h1>MI AMOR(●'◡'●)💕</h1>
+    <div
+        <h1>hola (●'◡'●)💕</h1>
         <h2>Tengo un regalo para ti✍(◔◡◔)</h2>
         <button onclick="window.location.href='rosas.html'">Ver regalo☞💛</button>
     </div>
